ClientDto class adjustment